--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,7 @@
 NODE_ENV=development
 PORT=5000
-MONGODB_URI=mongodb://localhost:27017/pawsync
+MONGODB_URI=mongodb+srv://PawSync_admin:PawSync2025!@pawsync.kw7lflf.mongodb.net/
+#mongodb+srv://PawSync_admin:<db_password>@pawsync.kw7lflf.mongodb.net/
 JWT_SECRET=your_jwt_secret_key_change_this
 JWT_EXPIRES_IN=7d
    
