--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,25 +18,28 @@
     "html5-qrcode": "^2.3.8",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
-    "next": "14.2.35",
+    "next": "^15",
     "next-auth": "^4.24.13",
     "qrcode.react": "^4.2.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19",
+    "react-dom": "^19",
     "react-hook-form": "^7.69.0",
     "react-leaflet": "^5.0.0",
     "zod": "^4.2.1",
-    "zustand": "^5.0.9"
+    "zustand": "^5.0.9",
+    "framer-motion": "^12.19",
+    "motion": "^11.0.0",
+    "lucide": "latest"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "eslint": "^8",
-    "eslint-config-next": "14.2.35",
+    "eslint-config-next": "^15",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tailwindcss": "^4",
+    "typescript": "^5.7"
   }
 }
