--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,15 @@
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@tailwindcss/postcss": "^4.1.18",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.19",
     "html5-qrcode": "^2.3.8",
     "leaflet": "^1.9.4",
+    "lucide": "latest",
     "lucide-react": "^0.562.0",
+    "motion": "^11.0.0",
     "next": "^15",
     "next-auth": "^4.24.13",
     "qrcode.react": "^4.2.0",
@@ -25,11 +29,9 @@
     "react-dom": "^19",
     "react-hook-form": "^7.69.0",
     "react-leaflet": "^5.0.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^4.2.1",
-    "zustand": "^5.0.9",
-    "framer-motion": "^12.19",
-    "motion": "^11.0.0",
-    "lucide": "latest"
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.21",
