--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "PawSync - Full stack application",
   "private": true,
   "scripts": {
-    "dev": "concurrently \"npm run dev --prefix backend\" \"PORT=3000 npm run dev --prefix frontend\"",
+    "dev": "concurrently \"npm run dev --prefix backend\" \"cross-env PORT=3000 npm run dev --prefix frontend\"",
     "build": "npm run build --prefix backend && npm run build --prefix frontend",
     "start": "concurrently \"npm start --prefix backend\" \"npm start --prefix frontend\""
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "cross-env": "^10.1.0"
   }
 }
