--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/postcss": "^4.1.18",
     "axios": "^1.13.2",
     "clsx": "^2.1.1",
@@ -23,7 +24,7 @@
     "leaflet": "^1.9.4",
     "lucide": "latest",
     "lucide-react": "^0.562.0",
-    "motion": "^12.28.1",
+    "motion": "^12.29.2",
     "next": "^15",
     "next-auth": "^4.24.13",
     "qrcode.react": "^4.2.0",
