--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@tailwindcss/postcss": "^4.1.18",
     "axios": "^1.13.2",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.19",
     "html5-qrcode": "^2.3.8",
@@ -30,6 +32,7 @@
     "qrcode.react": "^4.2.0",
     "radix-ui": "^1.4.3",
     "react": "^19",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^19",
     "react-hook-form": "^7.69.0",
     "react-leaflet": "^5.0.0",
