--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
     "leaflet": "^1.9.4",
     "lucide": "latest",
     "lucide-react": "^0.562.0",
-    "motion": "^12.29.2",
+    "motion": "^12.31.0",
     "next": "^15",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
@@ -37,6 +37,7 @@
     "react": "^19",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19",
+    "react-easy-crop": "^5.5.6",
     "react-hook-form": "^7.69.0",
     "react-leaflet": "^5.0.0",
     "sonner": "^2.0.7",
