--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "shebang-command": "^2.0.0",
     "shebang-regex": "^3.0.0",
     "shell-quote": "^1.8.3",
+    "sonner": "^2.0.7",
     "spawn-command": "^0.0.2",
     "string-width": "^4.2.3",
     "strip-ansi": "^6.0.1",
