--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "preinstall": "node scripts/check-build-tools.js",
     "dev": "nodemon src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
