--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
     "multer-gridfs-storage": "^5.0.2",
     "nfc-pcsc": "^0.8.1",
     "openai": "^6.15.0",
+    "qrcode": "^1.5.4",
     "resend": "^6.6.0",
     "winston": "^3.19.0",
     "ws": "^8.19.0"
@@ -41,6 +42,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^25.0.3",
+    "@types/qrcode": "^1.5.6",
     "@types/ws": "^8.18.1",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
