--- a/backend/package.json
+++ b/backend/package.json
@@ -28,12 +28,14 @@
     "morgan": "^1.10.1",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
-    "nfc-pcsc": "^0.8.1",
     "openai": "^6.15.0",
     "qrcode": "^1.5.4",
     "resend": "^6.6.0",
     "winston": "^3.19.0",
     "ws": "^8.19.0"
+  },
+  "optionalDependencies": {
+    "nfc-pcsc": "^0.8.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
