[OTHER] google sign in works

--- a/backend/.env
+++ b/backend/.env
@@ -8,7 +8,7 @@ JWT_EXPIRES_IN=7d
 OPENAI_API_KEY=your_openai_key
 PDFMONKEY_API_KEY=your_pdfmonkey_key
 PDFMONKEY_TEMPLATE_ID=your_template_id
-GOOGLE_CLIENT_ID=your_google_client_id
-GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_CLIENT_ID=195345062122-ur5m5o50b5h52mhn9efg12b6bmk44v95.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
 RESEND_API_KEY=your_resend_key
 FRONTEND_URL=http://localhost:3000
