--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/node-cron": "^3.0.11",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
@@ -28,6 +29,7 @@
     "morgan": "^1.10.1",
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2",
+    "node-cron": "^4.2.1",
     "openai": "^6.15.0",
     "qrcode": "^1.5.4",
     "resend": "^6.6.0",
